--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -14,6 +14,11 @@
           <a class="nav-link" href="{% url 'shop:shoppage' %}">Zero Waste Shop</span></a>
         </li>
       </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'donasi:donasipage' %}">Donasi</span></a>
+        </li>
+      </ul>
     </div>
 </nav>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
