--- a/donasi/templates/formulirDonasiModal.html
+++ b/donasi/templates/formulirDonasiModal.html
@@ -2,13 +2,13 @@
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="formulirDonasiModalLabel">Detail Yayasan</h5>
+          <h5 class="modal-title" id="formulirDonasiModalLabel">Formulir Donasi</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <h5 class="text-center">Formulir Donasi</h5>
+          <h5 class="text-center">Panti Asuhan Yatim Piatu PKU Aisyiyah Blambangan</h5>
           <img src="https://i.ibb.co/jzr0xHd/aisyiyah.jpg" class="card-img-top">
 
           <p class="font-weight-bold mt-3">Jenis Barang :</p>
