Feat: Riwayat Donasi

--- a/donasi/templates/detailModal.html
+++ b/donasi/templates/detailModal.html
@@ -27,7 +27,7 @@
           <p>Jl. Pramuka No 304 Blambangan Kec. Bawang, Kab. Banjarnegara 53471</p>
         </div>
         <div class="modal-footer mt-5">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Kembali</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
           <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#formulirDonasiModal">Donasi</button>
         </div>
       </div>
