--- a/donasi/templates/formulirBerhasilModal.html
+++ b/donasi/templates/formulirBerhasilModal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="formulirBerhasilModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="formulirDonasiModalLabel" aria-hidden="true">
+<div class="modal fade" id="formulirBerhasilModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="formulirBerhasilLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
         <div class="modal-body text-center">
