--- a/donasi/templates/formulirDonasiModal.html
+++ b/donasi/templates/formulirDonasiModal.html
@@ -43,7 +43,7 @@
           
         </div>
         <div class="modal-footer mt-5">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" data-toggle="modal" data-target="#detailModal">Kembali</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Tutup</button>
           <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#formulirBerhasilModal">Simpan</button>
         </div>
       </div>
