Add feature deskripsi barang

--- a/shop/templates/deskripsiBarang.html
+++ b/shop/templates/deskripsiBarang.html
@@ -7,9 +7,9 @@
             <h1 style="font-family: 'Caveat', cursive;">Zero Waste Shop</h1>
         </div>
         <div class="col-2">
-            <a href="{% url 'shop:riwayat' %}">
+            <a href="{% url 'shop:shoppage' %}">
                 <button type="button" class="btn btn-outline-dark" style="float: right;">
-                    Riwayat Transaksi
+                    Kembali 
                 </button>
             </a>
         </div>
