--- a/shop/templates/riwayatModal.html
+++ b/shop/templates/riwayatModal.html
@@ -39,7 +39,7 @@
             <hr>
             <div class="row">
                 <div class="col-9">
-                    <span><b>Pilih metode riwayat</b>:</span>
+                    <span><b>Metode pengiriman</b>:</span>
                 </div>
                 <div class="col-5 col-sm-3">
                     <span><b>Biaya</b></span>
