--- a/article/templates/articlePage.html
+++ b/article/templates/articlePage.html
@@ -10,12 +10,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"></head>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/article.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/article2.css' %}">
 
 </head>
 
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
     {% include 'navbar.html' %}
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('https://3.bp.blogspot.com/-7e6skWMM4iI/XGav5UtyXVI/AAAAAAAAGyU/LXKJ8E1CGpIvBE3MPqRzjIoaiYSivfS6QCLcBGAs/w1200-h630-p-k-no-nu/pexes%2Bzero%2Bwaste.jpeg')">
+        <div class="overlay"></div>
+        <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+                <h1 style="font-family: 'Caveat', cursive !important; font-weight: 700 !important;">SoLink</h1>
+                <span class="subheading">Platform Pendukung Gaya Hidup Zero Waste</span>
+            </div>
+            </div>
+        </div>
+        </div>
+    </header>
     <div class="blog">
         <div class="container">
           <div class="row">
