--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -9,35 +9,44 @@
   {% block style %}{% endblock %}
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #679186;">
-    <a class="navbar-brand" href="{% url 'home:homepage' %}" style="font-family: 'Caveat', cursive; font-weight: 700;">SoLink</a>
+<style>
+  .navbar-nav > li{
+    margin-left:6px;
+    margin-right:6px;
+  }
+</style>
+
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #679186;">
+    <a class="navbar-brand" href="{% url 'article:articleList' %}" style="font-family: 'Caveat', cursive; font-weight: 700;">SoLink</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'home:homepage' %}">Home <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            role : Admin
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'article:editArticle' %}">Kelola Artikel</a>
+          </div>
         </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'shop:shoppage' %}">Zero Waste Shop</span></a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            role : Mitra
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'barang:listBarang' %}">Kelola Barang</a>
+          </div>
         </li>
-      </ul>
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'donasi:donasipage' %}">Donasi</span></a>
+          <a class="nav-link active" href="{% url 'article:articleList' %}">Home <span class="sr-only">(current)</span></a>
         </li>
-      </ul>
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'article:articleList' %}">Article </a>
+          <a class="nav-link active" href="{% url 'shop:shoppage' %}">Zero Waste Shop</span></a>
         </li>
-      </ul>
-      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'barang:listBarang' %}">Kelola Barang</span></a>
+          <a class="nav-link active" href="{% url 'donasi:donasipage' %}">Donasi</span></a>
         </li>
       </ul>
     </div>
