add input pengiriman mitra

--- a/shop/templates/mitra/mtr_riwayatModal.html
+++ b/shop/templates/mitra/mtr_riwayatModal.html
@@ -56,7 +56,7 @@
             </div>
             <div class="row">
                 <div class="col-5">
-                    <a href="">Input resi pengiriman</a>
+                    <a href="{% url 'mtr_shop:pengiriman' %}">Input resi pengiriman</a>
                 </div>
                 <div class="col-4"></div>
                 <div class="col-5 col-sm-3"></div>
