--- a/shop/templates/mitra/mtr_shop.html
+++ b/shop/templates/mitra/mtr_shop.html
@@ -9,9 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"></head>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        .hargaKeranjang {
-            font-size: 70%;
-        }
+        
     </style>
 </head>
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
@@ -56,7 +54,7 @@
             <div class="col mb-4">
               <div class="card">
                 <div class="card-body">
-                    <button type="button" class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#riwayatModal">
+                    <button type="button" class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#mtr_riwayatModal">
                         Lihat rincian
                     </button> 
                     <h5 class="card-title">Transaksi #x</h5>
@@ -86,7 +84,7 @@
             <div class="col mb-4">
               <div class="card">
                 <div class="card-body">
-                    <button type="button" class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#riwayatModal">
+                    <button type="button" class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#mtr_riwayatModal">
                         Lihat rincian
                     </button> 
                     <h5 class="card-title">Transaksi #x</h5>
