add feature transaksi penjualan mitra to navbar
modify templates to use new navbar

--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -37,6 +37,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{% url 'barang:listBarang' %}">Kelola Barang</a>
+            <a class="dropdown-item" href="{% url 'mtr_shop:penjualan' %}">Transaksi Penjualan</a>
           </div>
         </li>
         <li class="nav-item">
