--- a/shop/templates/mitra/mtr_pengiriman.html
+++ b/shop/templates/mitra/mtr_pengiriman.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;auto00;600;700&display=swap" rel="stylesheet">
 </head>
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
-    {% include 'mitra/mtr_navbar.html' %}
+    {% include 'navbar.html' %}
     <div class="container" style="margin-top: 2%;">
         <div class="row">
             <div class="col">
