--- a/shop/templates/mitra/mtr_shop.html
+++ b/shop/templates/mitra/mtr_shop.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body style="background-color: #bbd4ce; font-family: 'Nunito', sans-serif;">
-    {% include 'mitra/mtr_navbar.html' %}
+    {% include 'navbar.html' %}
     <div class="container" style="margin-top: 2%;">
         <div class="row">
             <div class="col" style="text-align: center;">
