add more info in transaksi mitra

--- a/shop/templates/mitra/mtr_riwayatModal.html
+++ b/shop/templates/mitra/mtr_riwayatModal.html
@@ -10,6 +10,13 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col">
+                    <b>Alamat</b>
+                    <p>Universitas Indonesia, Jalan Margonda Raya, Depok, Jawa Barat</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col">
                     <b>Status</b>
                     <p>Sedang Dikemas</p>
                 </div>
