--- a/shop/templates/mitra/mtr_shop.html
+++ b/shop/templates/mitra/mtr_shop.html
@@ -47,6 +47,8 @@
                                 <td>:  Selesai</td>
                             </tr>
                         </table>
+                        <br>
+                        Pembayaran sebesar Rp xx.xxx telah berhasil dikirimkan.
                     </p>
                 </div>
               </div>
