Add feature login/signup

--- a/barang/templates/hapusBarang.html
+++ b/barang/templates/hapusBarang.html
@@ -50,7 +50,7 @@
               <p class="card-text">Rp 65.000</p>
           </div>
           <div>
-            <button class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#konfirmasiHapus">Hapus</button>
+            <button class="btn btn-outline-dark" style="float: right;" data-toggle="modal" data-target="#konfirmasiHapus" data-todo='12'>Hapus</button>
           </div>
         </div>
       </div>
@@ -142,6 +142,6 @@
   </div>  
 </div>
 
-{% include 'konfirmasiHapus.html' %}
+<!-- {% include 'konfirmasiHapus.html' %} -->
 
 {% endblock %}
