--- a/home/templates/navbar.html
+++ b/home/templates/navbar.html
@@ -6,7 +6,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet"></head>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&display=swap" rel="stylesheet">
-  {% block style %}{% endblock %}
 </head>
 
 <style>
@@ -15,6 +14,7 @@
     margin-right:6px;
   }
 </style>
+{% block style %}{% endblock %}
 
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #679186;">
     <a class="navbar-brand" href="{% url 'article:articleList' %}" style="font-family: 'Caveat', cursive; font-weight: 700;">SoLink</a>
@@ -57,6 +57,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="{% url 'donasi:donasipage' %}">Donasi</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="{% url 'loginin:loginin' %}">Log In</span></a>
         </li>
       </ul>
     </div>
