feat: functional melakukan donasi [GREEN]

--- a/donasi/templates/kontributor-melihat-riwayat-donasi/riwayatdonasi.html
+++ b/donasi/templates/kontributor-melihat-riwayat-donasi/riwayatdonasi.html
@@ -39,8 +39,8 @@
         </div>
     </div>
 
-    {% include 'riwayatDonasiModal.html' %}
-    {% include 'batalkanDonasiModal.html' %}
-    {% include 'batalkanDiprosesModel.html' %}
+    {% include 'kontributor-melihat-riwayat-donasi/riwayatDonasiModal.html' %}
+    {% include 'kontributor-melihat-riwayat-donasi/batalkanDonasiModal.html' %}
+    {% include 'kontributor-melihat-riwayat-donasi/batalkanDiprosesModel.html' %}
 </body>
 </html>
